--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,10 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+unbind z
+
+bind m resize-pane -Z
+
 # Reload config with `prefix + r`
 bind r source-file ~/.tmux.conf \; display-message "Reloaded!"
 
@@ -14,7 +18,7 @@ set-option -g renumber-windows on
 
 set -g detach-on-destroy off
 set -g escape-time 0
-set -g history-limit 1000000
+set -g history-limit 1000000 
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 set -g default-terminal "${TERM}"
@@ -31,7 +35,7 @@ set-option -g default-terminal "screen-256color"
 set-option -g allow-passthrough on
 
 # Alt + arrow keys to switch panes
-bind -n M-Left select-pane -L
+bind -n M-Left select-pane -L 
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
@@ -53,6 +57,12 @@ set -g @plugin 'wfxr/tmux-fzf-url'
 
 # Continuum auto-restore
 set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
+
+# Resurrect
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
 
 # TPM initialization
 run '~/.tmux/plugins/tpm/tpm'
+
