Adding catppuccin components

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,10 +15,9 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 set-option -g renumber-windows on
 
-
 set -g detach-on-destroy off
 set -g escape-time 0
-set -g history-limit 1000000 
+set -g history-limit 1000000
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 set -g default-terminal "${TERM}"
@@ -29,13 +28,13 @@ set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open 
 set -g @fzf-url-history-limit '2000'
 
 # Better colors and compatibility
-set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Allow passthrough if supported (optional: may not be necessary for most users)
 set-option -g allow-passthrough on
 
 # Alt + arrow keys to switch panes
-bind -n M-Left select-pane -L 
+bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
@@ -45,12 +44,13 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Plugin manager and plugins
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
-set -g @plugin 'omerxx/catppuccin-tmux' # My fork that holds the meetings script bc I'm lazy af
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
@@ -63,6 +63,16 @@ set -g @continuum-save-interval '5'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
+# Catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+#set -agF status-right "#{E:@catppuccin_status_battery}"
+
 # TPM initialization
 run '~/.tmux/plugins/tpm/tpm'
-
